[package]
name = "albino"
version = "0.2.0"
authors = ["faultier"]
edition = "2021"
repository = "https://github.com/wspace/faultier-albino"

[dependencies]
getopts = "0.2"
log = "0.4"
whitebase = { git = "https://github.com/wspace/faultier-whitebase" }

[lib]
name = "albino"
path = "src/albino/lib.rs"

[[bin]]
name = "albino-run"
path = "src/bin/albino-run.rs"

[[bin]]
name = "albino-build"
path = "src/bin/albino-build.rs"

[[bin]]
name = "albino-exec"
path = "src/bin/albino-exec.rs"

[[bin]]
name = "albino-gen"
path = "src/bin/albino-gen.rs"


[[bin]]
name = "albino"
path = "src/bin/albino.rs"
